--- a/css/principal.css
+++ b/css/principal.css
@@ -1,3 +1,12 @@
+::-moz-selection { /* Code for Firefox */
+    color: red;
+    background: yellow;
+  }
+  
+::selection {
+  color: red;
+  background: yellow;
+  }
 body{
     background-color: brown;
 }
@@ -38,6 +47,7 @@ table{
     background-color: rgb(160, 46, 12);
     width:100%;
     color: rgb(255, 255, 255);
+    font-family: 'Zilla Slab', serif;
 }
 
 table tr:hover{
